# xdp-tunnel-AAA

./: .clang-format  .clang-tidy  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .security-audit-complete  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  dkms.conf  tun.conf.example
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/actions/setup-deps/: action.yml
.github/scripts/: junit-summary.py
.github/workflows/: ci.yml  labeler.yml  nightly.yml  release.yml
deploy/grafana/: tachyon-dashboard.json
deploy/helm/tachyon/: Chart.yaml  values.yaml
deploy/helm/tachyon/templates/: _helpers.tpl  configmap.yaml  daemonset.yaml  secret.yaml  servicemonitor.yaml
deploy/prometheus/: alerts.yaml
docker/: Dockerfile.build  Dockerfile.prod  Dockerfile.test
docs/: BRANCH-CLEANUP.md  MIGRATION_v4_to_v5.md  OPERATIONS.md  PERFORMANCE.md  SECURITY_CONTROLS.md
docs/adr/: 0001-tri-layer-architecture.md  0002-test-strategy.md
docs/man/: tachyon.1
kmod/: Makefile  mod.c
loader/: audit.cpp  audit.h  autoconf.cpp  autoconf.h  bandwidth_estimator.h  cipher_suite.h  circuit_breaker.cpp  circuit_breaker.h  config.cpp  crypto.cpp  doh_mimic.cpp  doh_mimic.h  fingerprint.cpp  fingerprint.h  http2_mimic.cpp  http2_mimic.h  hybrid_kex.cpp  hybrid_kex.h  ip_rate_limiter.cpp  ip_rate_limiter.h  log.h  main.cpp  metrics.cpp  metrics.h  mgmt.cpp  mgmt.h  multipath.cpp  multipath.h  network.cpp  obfs.cpp  obfs.h  padding.cpp  padding.h  pq_handshake.cpp  pq_handshake.h  pq_kem.h  pq_session.cpp  pq_session.h  pqc.cpp  pqc.h  (+26 more)
scripts/: _tachyon  delete-stale-branches.sh  tachyon.bash
src/: common.h  xdp_core.c
systemd/: tachyon@.service
tests/: CMakeLists.txt  CMakePresets.json  test_config.cpp  test_crypto.cpp  test_harness.h  test_protocol.cpp  test_utils.cpp  valgrind.supp
tests/benchmarks/: bench_circuit_breaker.cpp  bench_crypto.cpp  bench_fingerprint.cpp  bench_ip_rate_limiter.cpp  bench_log.cpp  bench_padding.cpp  bench_ratchet.cpp  bench_transport.cpp
tests/fixtures/: edge_cases.conf  invalid_key.conf  minimal.conf  missing_fields.conf  valid.conf
tests/fuzz/: fuzz_config_parser.cpp  fuzz_crypto.cpp  fuzz_pq_handshake.cpp
tests/fuzz/corpus/config/: boundary_values.seed  comments_only.seed  duplicate_keys.seed  missing_values.seed  nested_sections.seed  shell_injection.seed  tun.conf.seed  unicode_binary.seed
tests/integration/: lib.sh  test_dpd.sh  test_enterprise_features.sh  test_key_rotation.sh  test_tunnel_e2e.sh
tests/unit/: test_advanced.cpp  test_audit.cpp  test_autoconf.cpp  test_circuit_breaker.cpp  test_config.cpp  test_crypto.cpp  test_fingerprint.cpp  test_hybrid_kex.cpp  test_integration_v5.cpp  test_ip_rate_limiter.cpp  test_log.cpp  test_metrics.cpp  test_mgmt.cpp  test_nonce_cache.cpp  test_obfs.cpp  test_padding.cpp  test_phase23.cpp  test_pq_handshake.cpp  test_pq_session.cpp  test_pqc.cpp  test_protocol.cpp  test_ratchet.cpp  test_rate_limiter.cpp  test_replay.cpp  test_sd_notify.cpp  test_secmem.cpp  test_secret_resolution.cpp  test_shutdown.cpp  test_smart_obfs.cpp  test_transcript.cpp  test_transport.cpp  test_utils.cpp  test_wire_v5.cpp  test_x448.cpp
tests/xdp/: xdp_test_runner.cpp
